--- a/table/video.html
+++ b/table/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<p:>  <a href="index.html">Главная </a>&nbsp<a href="Manadger.html">&nbsp Manadger video&nbsp</a> &nbsp<a href="zone.html">Zone M.13 </a>&nbspВидео</p:>
+<!--<p:>  <a href="index.html">Главная </a>&nbsp<a href="Manadger.html">&nbsp Manadger video&nbsp</a> &nbsp<a href="zone.html">Zone M.13 </a>&nbspВидео</p:>-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <h1>Test file</h1>
  <p>
        <video
-           src=https://youtu.be/lgCDTmviOes width="400" height="300">
+           src=https://youtu.be/lgCDTmviOes width="400" height="300"></video>
 
    </p>
 </body>
